# OfficeFlow

./: README.md
officeflow-openenv/: Dockerfile  README.md  database.py  inference.py  logger.py  officeflow.db  openenv.yaml  pyproject.toml  requirements.txt
officeflow-openenv/dashboard/: streamlit_app.py
officeflow-openenv/env/: __init__.py  graders.py  models.py  office_env.py  tasks.py
officeflow-openenv/server/: app.py
